Cambios agregamos texto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hola estudiantes este es mi Sitio Web</p>
+    <p>Hola amigos este es mi Sitio Web</p>
 </body>
 </html>
